--- a/frontend/src/pages/Compose/Photos/Photos.module.scss
+++ b/frontend/src/pages/Compose/Photos/Photos.module.scss
@@ -1,13 +1,17 @@
 
-
-// Main
 .container {
-  position: absolute;
-  top: var(--default-layout-header-height);
-  transition: 0.3s ease;
-  width: 100%;
-  &.scaled {
-    transform: translateX(200px);
-    width: calc(100% - 400px);
+// Main
+  .main {
+    position: absolute;
+    top: var(--default-layout-header-height);
+    right: 0;
+    transition: 0.3s ease;
+    width: 100%;
+
+    &.scaled {
+      width: calc(100% - 400px);
+    }
   }
 }
+
+
