Frontend - create useQuestionService, useAudioService, usePhotoService handle server questions api, upload and take url audio file, photo file. - Button select file .txt for answer

--- a/frontend/src/pages/Compose/Photos/DisplayImage.module.scss
+++ b/frontend/src/pages/Compose/Photos/DisplayImage.module.scss
@@ -1,5 +1,7 @@
-.add-image {
-  &:hover {
-    cursor: pointer;
+.container {
+  .add-image {
+      &:hover {
+        cursor: pointer;
+      }
   }
 }
