--- a/frontend/src/pages/Compose/Photos/Answers.module.scss
+++ b/frontend/src/pages/Compose/Photos/Answers.module.scss
@@ -2,4 +2,9 @@
   margin-left: 8px;
   flex: 1;
   align-self: center;
+
+  .upload-text-answers {
+    margin-top: 20px;
+    float: inline-end;
+  }
 }
