--- a/frontend/src/pages/Compose/Photos/QuestionGroups.module.scss
+++ b/frontend/src/pages/Compose/Photos/QuestionGroups.module.scss
@@ -8,7 +8,9 @@
       margin: 20px 0;
       border: solid 1px cyan;
     }
-    .badge {
+    .cancel-button,
+    .complete-button
+    {
       margin-left: 6px;
     }
   }
