--- a/frontend/src/components/Popper/Menu/MenuItem.module.scss
+++ b/frontend/src/components/Popper/Menu/MenuItem.module.scss
@@ -1,19 +1,26 @@
 .container {
-  // Menu items
-    .button {
-      width: 100%;
-      justify-content: flex-start;
-      border-radius: 0;
-      padding: 11px 16px;
-      line-height: 1.8rem;
-      font-weight: 600;
-  
-      &.separate {
-        border-top: 1px solid rgba(22, 24, 35, 0.12);
-      }
-  
-      &:hover {
-        background-color: rgba(22, 24, 35, 0.03);
-      }
+
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  .image {
+    margin-right: 20px;
+  }
+
+  .button {
+    width: 100%;
+    justify-content: flex-start;
+    border-radius: 0;
+    padding: 11px 16px;
+    line-height: 1.8rem;
+    font-weight: 600;
+
+    &.separate {
+      border-top: 1px solid rgba(22, 24, 35, 0.12);
     }
+
+    &:hover {
+      background-color: rgba(22, 24, 35, 0.03);
+    }
+  }
 }
