--- a/frontend/src/components/Compose/AudioPlayer/AudioPlayer.module.scss
+++ b/frontend/src/components/Compose/AudioPlayer/AudioPlayer.module.scss
@@ -1,16 +1,22 @@
 .container {
-  align-self: center;
   display: flex;
   align-items: center;
-  min-width: 50%;
+  width: 100%;
+  height: 60px;
+  margin: auto;
+  background: var(--white);
+  border-radius: 50px;
+  padding: 20px;
+  border-radius: 20px !important;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);
   .play-button {
     display: flex;
     align-self: center;
     margin-right: 4px;
     padding: 6px;
-    font-size: 1.6rem;
-    background-color: #007bff;
-    color: var(--white);
+    font-size: 2.875rem;
+    background: inherit;
+    color: var(--primary);
     border: none;
     cursor: pointer;
     border-radius: 5px;
