--- a/frontend/src/components/Compose/Answers/Answers.module.scss
+++ b/frontend/src/components/Compose/Answers/Answers.module.scss
@@ -2,9 +2,21 @@
   margin-left: 8px;
   flex: 1;
   align-self: center;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: auto;
+  background: var(--white);
+  border-radius: 50px;
+  padding: 20px 20px;
+  border-radius: 20px !important;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);  
+  .group {
+    width: 100%;
+  }
   .upload-text-answers {
     margin-top: 20px;
-    float: inline-end;
+    align-self: flex-end;
   }
 }
