--- a/frontend/src/components/Compose/AudioPlayer/AudioPlayer.module.scss
+++ b/frontend/src/components/Compose/AudioPlayer/AudioPlayer.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   align-items: center;
+  flex-direction: row-reverse;
   width: 100%;
   height: 60px;
   margin: auto;
@@ -9,24 +10,29 @@
   padding: 20px;
   border-radius: 20px !important;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);
-  .play-button {
-    display: flex;
-    align-self: center;
-    margin-right: 4px;
-    padding: 6px;
-    font-size: 2.875rem;
-    background: inherit;
-    color: var(--primary);
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
 
   .upload-audio {
-    margin-right: 20px;
-  }
-
-  .progress-bar {
+      margin:0 20px;
+    }
+  .player {
+    display: flex;
     flex: 1;
+    align-items: center;
+    .play-button {
+      display: flex;
+      align-self: center;
+      margin-right: 4px;
+      padding: 6px;
+      font-size: 2.875rem;
+      background: inherit;
+      color: var(--primary);
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .progress-bar {
+      flex: 1;
+    }
   }
+  
 }
