DB - add column photoId, audioId into Questions - delete QuestionAudios table Backend - handle when db changed Frontend - handle when controllers of backend changed

--- a/frontend/src/components/Compose/Answer/Answer.module.scss
+++ b/frontend/src/components/Compose/Answer/Answer.module.scss
@@ -20,10 +20,13 @@
 
   .group {
     display: flex;
-    margin-left: 4px;
     flex: 1;
+    margin-left: 4px;
     .input {
       flex: 1;
+    }
+    .history {
+      width: 42px;
     }
   }
 }
