--- a/frontend/src/components/Compose/DisplayImage/DisplayImage.module.scss
+++ b/frontend/src/components/Compose/DisplayImage/DisplayImage.module.scss
@@ -1,7 +1,12 @@
 .container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .add-image {
-      &:hover {
-        cursor: pointer;
-      }
+    &:hover {
+      cursor: pointer;
+    }
   }
+
 }
