--- a/frontend/src/components/Compose/Sidebar/Sidebar.module.scss
+++ b/frontend/src/components/Compose/Sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
   background-color: rgba(var(--bs-tertiary-bg-rgb)) !important;
   padding: 0 22px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-
+  width: var(--sidebar-width) !important;
   .header {
     padding: 22px 0;
 
