--- a/frontend/src/pages/Compose/Template/Template.module.scss
+++ b/frontend/src/pages/Compose/Template/Template.module.scss
@@ -1,16 +1,76 @@
 .container {
+
+  .header {
+    position: fixed;
+    top: var(--default-layout-header-height);
+    width: 100%;
+    left: 0;
+    transition: all .3s ease;
+    &.scaled {
+      left: var(--sidebar-width);
+    }
+  }
   // Main
   .main {
     position: absolute;
-    top: var(--default-layout-header-height);
+    top: calc(var(--default-layout-header-height) * 2);
     right: 0;
-    transition: 0.3s ease;
+    transition: all 0.3s ease;
     width: 100%;
-
+    overflow: hidden;
+   
     &.scaled {
-      width: calc(100% - 400px);
+        width: calc(100% - var(--sidebar-width));
+      }
+    .questions {
+      top: var(--default-layout-header-height);
     }
+
   }
 
+  .toggle-bottom-bar-button {
+    --button-size: 48px;
+    z-index: 100000;
+    position: fixed;
+    bottom: calc(var(--bottombar-height) - var(--button-size) / 2);
+    padding: 0;
+    width: var(--button-size);
+    height: var(--button-size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background: var(--white);
+    border-radius: 50%;
+    transition: all .3s ease;
+    cursor: pointer;
 
+    &.scaled {
+      left: calc(var(--sidebar-width) + (100% - var(--sidebar-width)) / 2 - var(--button-size) / 2);
+    }
+
+    &.offset {
+      bottom: calc(var(--button-size) * -1 / 3); // 2/3 itself
+    }
+
+  }
 }
+
+
+.bottom-bar {
+  position: fixed;
+  right: 0 !important;
+  // left: 0;
+  bottom: 0;
+  transition: 0.3s ease;
+  width: 100%;
+
+  &.scaled {
+    width: calc(100% - var(--sidebar-width));
+    left: var(--sidebar-width) !important;
+  }
+
+  
+}
+    
