--- a/frontend/src/components/Compose/DisplayImage/DisplayImage.module.scss
+++ b/frontend/src/components/Compose/DisplayImage/DisplayImage.module.scss
@@ -3,6 +3,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &.error {
+    border: 1px solid red;
+  }
+
   .add-image {
     &:hover {
       cursor: pointer;
