--- a/frontend/src/components/CustomTextArea/CustomTextArea.module.scss
+++ b/frontend/src/components/CustomTextArea/CustomTextArea.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
   margin: auto;
@@ -10,7 +11,7 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);
 
   .text {
-    margin-left: 24px;
+    margin: 24px 0;
     flex: 1;
     font-size: 1.6rem;
 
@@ -30,7 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 20px;
+    margin: 20px;
     background: var(--primary);
     padding: 8px 16px;
     border-radius: 6px;
