--- a/frontend/src/pages/Compose/Template/Template.module.scss
+++ b/frontend/src/pages/Compose/Template/Template.module.scss
@@ -8,6 +8,7 @@
     transition: all .3s ease;
     &.scaled {
       left: var(--sidebar-width);
+      width: calc(100% - var(--sidebar-width));
     }
   }
   // Main
