--- a/frontend/src/components/CustomTextArea/CustomTextArea.module.scss
+++ b/frontend/src/components/CustomTextArea/CustomTextArea.module.scss
@@ -10,6 +10,10 @@
   border-radius: 20px !important;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);
 
+  .title {
+    font-size: 1.8rem;
+  }
+
   .text-wrapper {
     width: 100%;
     margin: 24px 0;
