--- a/frontend/src/pages/Vocabulary/Vocabulary.module.scss
+++ b/frontend/src/pages/Vocabulary/Vocabulary.module.scss
@@ -1,100 +1,49 @@
 .container {
-
-  .header {
-    position: fixed;
-    top: var(--default-layout-header-height);
-    width: 100%;
-    left: 0;
-    transition: all .3s ease;
-
-    &.scaled {
-      left: var(--sidebar-width);
-      width: calc(100% - var(--sidebar-width));
-    }
-  }
-
-  // Main
   .main {
-    position: absolute;
-    top: calc(var(--default-layout-header-height) * 2);
-    right: 0;
-    transition: all 0.3s ease;
-    width: 100%;
-    overflow-y: auto;
-    min-height: calc(100% - 2 * var(--default-layout-header-height));
-    display: flex;
-    flex-direction: column;
-    // background-color: var(--white);
-    &.sidebar-scaled {
-      width: calc(100% - var(--sidebar-width));
-
-    }
-
-    &.bottombar-scaled {
-      transform: translateY(calc(var(--bottombar-height) * -1));
-      height: calc(100% + var(--bottombar-height));
-
-      .top {
-        height: var(--bottombar-height);
-      }
-    }
-
-    .vocabularies {
-      top: var(--default-layout-header-height);
-    }
-
-    .top {
-      width: 100%;
-    }
-
-    .vocabularies {
-      width: 100%;
-      flex: 1
-    }
-  }
-
-  .toggle-bottom-bar-button {
-    --button-size: 48px;
-    z-index: 100000;
-    position: fixed;
-    bottom: calc(var(--bottombar-height) - var(--button-size) / 2);
-    padding: 0;
-    width: var(--button-size);
-    height: var(--button-size);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background: var(--white);
-    border-radius: 50%;
-    transition: all .3s ease;
-    cursor: pointer;
-
-    &.scaled {
-      left: calc(var(--sidebar-width) + (100% - var(--sidebar-width)) / 2 - var(--button-size) / 2);
-    }
-
-    &.offset {
-      bottom: calc(var(--button-size) * -1 / 3); // 2/3 itself
-    }
-
+    margin-top: 24px;
   }
 }
-
-
-.bottom-bar {
-  position: fixed;
-  right: 0 !important;
-  // left: 0;
-  bottom: 0;
-  transition: 0.3s ease;
-  width: 100%;
-
-  &.scaled {
-    width: calc(100% - var(--sidebar-width));
-    left: var(--sidebar-width) !important;
+.practice-status {
+  display: flex;
+  flex-direction: column;
+  .topic-name {
+    font-size: 1.4rem;
+    margin-bottom: 18px;
   }
 
+  .group {
+    display: flex;
+    .item {
+      position: relative;
+      padding-left: 14px;
+      &+.item {
+        margin-left: 24px;
+      }
 
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+      }
+
+    }
+
+    .memorized::before {
+      background-color: greenyellow;
+    }
+
+    .unmemorized::before {
+      background-color: lightcoral;
+    }
+
+    .unanswered::before {
+      background-color: gray;
+    }
+
+  }
 }
