Backend - handle API grammar Frontend - handle create grammar page

--- a/frontend/src/components/Quote/Quote.module.scss
+++ b/frontend/src/components/Quote/Quote.module.scss
@@ -6,11 +6,13 @@
   justify-content: center;
   .image {
     display: block;
+    width: 500px;
+    height: 100%;
   }
   
   .text {
     font-weight: bold;
-    width: 190px;
+    width: 250px;
     position: absolute;
     top: 50%;
     left: 50%;
