--- a/frontend/src/pages/Vocabulary/Vocabulary.module.scss
+++ b/frontend/src/pages/Vocabulary/Vocabulary.module.scss
@@ -34,11 +34,11 @@
     }
 
     .memorized::before {
-      background-color: greenyellow;
+      background-color: #0dcaf0;
     }
 
     .unmemorized::before {
-      background-color: lightcoral;
+      background-color: #dc3545;
     }
 
     .unanswered::before {
