--- a/frontend/src/components/ContentManager/ContentManager.module.scss
+++ b/frontend/src/components/ContentManager/ContentManager.module.scss
@@ -20,10 +20,10 @@
     transition: all 0.3s ease;
     width: 100%;
     overflow-y: auto;
+    height: 100%;
 
     &.sidebar-scaled {
       width: calc(100% - var(--sidebar-width));
-
     }
 
     &.bottombar-scaled {
