--- a/frontend/src/components/FlipCard/FlipCard.module.scss
+++ b/frontend/src/components/FlipCard/FlipCard.module.scss
@@ -7,7 +7,10 @@
 
   &.flipped .inner {
     transform: rotateY(180deg);
-    /* Lật thẻ khi thêm class `flipped` */
+  }
+
+  .header {
+    margin-bottom: 20px;
   }
 
   .inner {
