--- a/frontend/src/components/VocabularyCard/VocabularyCard.module.scss
+++ b/frontend/src/components/VocabularyCard/VocabularyCard.module.scss
@@ -13,6 +13,12 @@
   }
 
   .front {
+    display: flex;
+    flex-direction: column;
+    
+    .status {
+      margin: 24px 0;
+    }
     .photo {
       user-select: none;
       margin-bottom: 20px;
@@ -27,7 +33,8 @@
     }
   }
   .back {
-    padding: 24px;
+    display: flex;
+    flex-direction: column;
     .definition {
       font-size: 2.2rem;
       font-weight: 800;
@@ -37,6 +44,28 @@
     .example {
       margin-top: 24px;
       text-align: center;
+      font-size: 1.6rem;
+    }
+
+    .button-group {
+      margin-top: 24px;
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+
+      
+    }
+  }
+
+  .button {
+    font-size: 1.6rem;
+    border-radius: 999px;
+    padding-left: 20px;
+    padding-right: 20px;
+    min-width: 200px;
+
+    &+.button {
+      margin-left: 20px;
     }
   }
 }
