--- a/frontend/src/layouts/NavigationMenu/NavigationMenu.module.scss
+++ b/frontend/src/layouts/NavigationMenu/NavigationMenu.module.scss
@@ -1,6 +1,10 @@
 .nav-item {
-  min-height: 4rem;
-  min-width: 300px;
-  padding-top: 10px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // min-width: 100px;
+  // padding-top: 10px !important;
   font-size: 1.4rem;
+  width: auto;
+  white-space: nowrap;
 }
