--- a/frontend/src/components/ContentManager/ContentManager.module.scss
+++ b/frontend/src/components/ContentManager/ContentManager.module.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   .header {
     position: fixed;
     top: var(--default-layout-header-height);
@@ -14,30 +15,27 @@
 
   // Main
   .main {
-    position: absolute;
+    position: fixed;
+    left: 0;
     top: calc(var(--default-layout-header-height) * 2);
     right: 0;
+    bottom: 0;
     transition: all 0.3s ease;
     width: 100%;
     overflow-y: auto;
-    height: 100%;
 
     &.sidebar-scaled {
+      left: var(--sidebar-width);
       width: calc(100% - var(--sidebar-width));
     }
 
     &.bottombar-scaled {
-      transform: translateY(calc(var(--bottombar-height) * -1));
+      // transform: translateY(calc(var(--bottombar-height) * -1));
       height: calc(100% + var(--bottombar-height));
 
-      .top {
-        height: var(--bottombar-height);
-      }
     }
 
-    .top {
-      width: 100%;
-    }
+
   }
 
   .toggle-bottom-bar-button {
