--- a/frontend/src/components/Answers/Answers.module.scss
+++ b/frontend/src/components/Answers/Answers.module.scss
@@ -1,3 +1,4 @@
+// Answers
 .container {
   margin-left: 8px;
   flex: 1;
@@ -29,5 +30,51 @@
   .upload-text-answers {
     margin-top: 20px;
     align-self: flex-start;
+  }
+}
+
+// Answer
+.answer {
+  display: flex !important;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  &.correct {
+    color: #00f418
+  }
+
+  &.incorrect {
+    color: red;
+  }
+
+  &.error {
+    border: 1px solid red;
+  }
+
+  &+.answer {
+    margin-top: 10px;
+  }
+
+  .label {
+    align-content: center;
+  }
+
+  .group {
+    display: flex;
+    flex: 1;
+    margin-left: 4px;
+
+    .input {
+      flex: 1;
+    }
+
+    .history {
+      width: 42px;
+    }
   }
 }
