--- a/frontend/src/components/BundleCards/BundleCards.module.scss
+++ b/frontend/src/components/BundleCards/BundleCards.module.scss
@@ -1,4 +1,19 @@
+// bundle cards
 .container {
   height: 100%;
   gap: 10px;
+}
+
+// bundle card
+.bundle-card {
+  min-width: 200px;
+  display: flex !important;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
