Server - Create TestTimers Table Frontend - Take advantage userId from useUserMode

--- a/frontend/src/components/Answers/Answers.module.scss
+++ b/frontend/src/components/Answers/Answers.module.scss
@@ -62,12 +62,12 @@
 
   .label {
     align-content: center;
+    margin-right: 8px;
   }
 
   .group {
     display: flex;
     flex: 1;
-    margin-left: 4px;
 
     .input {
       flex: 1;
