Frontend - Rename testSlice to questionsSingleSlice - Switch role in Profile - Fix call many API many times in Grammar Backend - TestTimerController: handle get timers by user id, handle get timer by user id and groupId, handle create test timer

--- a/frontend/src/pages/Profile/Profile.module.scss
+++ b/frontend/src/pages/Profile/Profile.module.scss
@@ -60,4 +60,16 @@
     }
   }
 
+  .switch-role-button {
+    span {
+      font-size: 1.6rem;
+      margin-right: 10px;
+    }
+  }
+
+}
+.role-button-wrapper {
+  .role-button {
+    font-size: 1.6rem;
+  }
 }
