--- a/frontend/src/pages/Vocabulary/Vocabulary.module.scss
+++ b/frontend/src/pages/Vocabulary/Vocabulary.module.scss
@@ -7,15 +7,17 @@
   display: flex;
   flex-direction: column;
   .topic-name {
-    font-size: 1.4rem;
     margin-bottom: 18px;
+    font-size: 1.6rem;
+    font-weight: 600;
   }
 
   .group {
     display: flex;
     .item {
       position: relative;
-      padding-left: 14px;
+      padding: 6px 24px;
+      font-size: 1.6rem;
       &+.item {
         margin-left: 24px;
       }
@@ -23,13 +25,14 @@
       &::before {
         content: '';
         position: absolute;
-        left: 0;
+        left: 4px;
         top: 50%;
         transform: translateY(-50%);
         width: 10px;
         height: 10px;
         border-radius: 50%;
       }
+
 
     }
 
