--- a/frontend/src/components/CustomModal/Modal.module.scss
+++ b/frontend/src/components/CustomModal/Modal.module.scss
@@ -1,10 +1,6 @@
 .container {
   .title {
-    color: var(--white);
-  }
-
-  .body {
-    color: var(--white);
+    font-size: 1.6rem;
   }
 
   .footer {
