--- a/frontend/src/pages/Grammar/Grammar.module.scss
+++ b/frontend/src/pages/Grammar/Grammar.module.scss
@@ -1,4 +1,17 @@
 
+.sidebar {
+  position: relative;
+  .level-select {
+    position: fixed;
+    left: 112px;
+    top: var(--default-layout-header-height);
+    margin-top: 16px;
+    width: 208px;
+    padding: 8px 10px;
+    font-size: 1.6rem;
+  }
+}
+
 // grammarAccordion
 .grammar-accordion-container {
   .btn-add {
