Frontend - Change text size of question text. - Max value of radar chart from auto to 100. - Enable shuffling answer, bundle in short talks part. - Disable save audio to local storage. - Home UI

--- a/frontend/src/components/Answers/Answers.module.scss
+++ b/frontend/src/components/Answers/Answers.module.scss
@@ -39,11 +39,10 @@
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
-  &:hover {
+  &:has(.text):hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.1);
   }
-
   &.correct {
     color: #00f418
   }
@@ -64,6 +63,8 @@
     align-content: center;
     margin-right: 8px;
   }
+
+  
 
   .group {
     display: flex;
