--- a/frontend/src/pages/HomeHasLogged/HomeHasLogged.module.scss
+++ b/frontend/src/pages/HomeHasLogged/HomeHasLogged.module.scss
@@ -2,3 +2,28 @@
   margin-top: 24px;
   min-height: 500px;
 }
+
+.container {
+  width: 100vw;
+}
+
+.features {
+  padding-top: 24px;
+}
+
+.about {
+  .img {
+    width: 100%;
+    height: 400px;
+    border-radius: 12px;
+  }
+}
+
+.team {
+  .img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+}
